--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
 	"author": "",
 	"license": "Apache-2.0",
 	"devDependencies": {
-		"@coralproject/eslint-config-talk": "^0.0.4"
+		"@coralproject/eslint-config-talk": "^0.0.4",
+		"eslint": "^4.14.0"
 	},
 	"dependencies": {
 		"debug": "^3.1.0",
 		"joi": "^13.0.0",
+		"lodash": "^4.17.4",
 		"node-fetch": "^1.7.3"
 	}
 }
